feat: JWT Signing and Validation
Implement JWT signing.
Implement JWT validation.
