# server/pkg/proto/kript/api/universal.pb.go
@@ -93,6 +93,7 @@ func (AEncryptionAlgorithm) EnumDescriptor() ([]byte, []int) {
 }
 
 type AccessToken struct {
+	Jwt                  *JWT     `protobuf:"bytes,1,opt,name=jwt,proto3" json:"jwt,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -122,27 +123,78 @@ func (m *AccessToken) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_AccessToken proto.InternalMessageInfo
 
+func (m *AccessToken) GetJwt() *JWT {
+	if m != nil {
+		return m.Jwt
+	}
+	return nil
+}
+
+// A representation of a JSON Web Token.
+type JWT struct {
+	// The Base 64 encoded JWT.
+	Token                string   `protobuf:"bytes,1,opt,name=token,proto3" json:"token,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *JWT) Reset()         { *m = JWT{} }
+func (m *JWT) String() string { return proto.CompactTextString(m) }
+func (*JWT) ProtoMessage()    {}
+func (*JWT) Descriptor() ([]byte, []int) {
+	return fileDescriptor_f55c2955aa4afcfe, []int{1}
+}
+func (m *JWT) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_JWT.Unmarshal(m, b)
+}
+func (m *JWT) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_JWT.Marshal(b, m, deterministic)
+}
+func (m *JWT) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_JWT.Merge(m, src)
+}
+func (m *JWT) XXX_Size() int {
+	return xxx_messageInfo_JWT.Size(m)
+}
+func (m *JWT) XXX_DiscardUnknown() {
+	xxx_messageInfo_JWT.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_JWT proto.InternalMessageInfo
+
+func (m *JWT) GetToken() string {
+	if m != nil {
+		return m.Token
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterEnum("kript.api.HashAlgorithm", HashAlgorithm_name, HashAlgorithm_value)
 	proto.RegisterEnum("kript.api.SEncryptionAlgorithm", SEncryptionAlgorithm_name, SEncryptionAlgorithm_value)
 	proto.RegisterEnum("kript.api.AEncryptionAlgorithm", AEncryptionAlgorithm_name, AEncryptionAlgorithm_value)
 	proto.RegisterType((*AccessToken)(nil), "kript.api.AccessToken")
+	proto.RegisterType((*JWT)(nil), "kript.api.JWT")
 }
 
 func init() { proto.RegisterFile("kript/api/universal.proto", fileDescriptor_f55c2955aa4afcfe) }
 
 var fileDescriptor_f55c2955aa4afcfe = []byte{
-	// 185 bytes of a gzipped FileDescriptorProto
+	// 229 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x92, 0xcc, 0x2e, 0xca, 0x2c,
 	0x28, 0xd1, 0x4f, 0x2c, 0xc8, 0xd4, 0x2f, 0xcd, 0xcb, 0x2c, 0x4b, 0x2d, 0x2a, 0x4e, 0xcc, 0xd1,
-	0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0xe2, 0x04, 0x4b, 0xe9, 0x25, 0x16, 0x64, 0x2a, 0xf1, 0x72,
-	0x71, 0x3b, 0x26, 0x27, 0xa7, 0x16, 0x17, 0x87, 0xe4, 0x67, 0xa7, 0xe6, 0x69, 0xc9, 0x70, 0xf1,
-	0x7a, 0x24, 0x16, 0x67, 0x38, 0xe6, 0xa4, 0xe7, 0x17, 0x65, 0x96, 0x64, 0xe4, 0x0a, 0x71, 0x73,
-	0xb1, 0x07, 0x7b, 0x38, 0xc6, 0x9b, 0x1a, 0x1a, 0x09, 0x30, 0x68, 0xc9, 0x73, 0x89, 0x04, 0xbb,
-	0xe6, 0x25, 0x17, 0x55, 0x16, 0x94, 0x64, 0xe6, 0xe7, 0x21, 0x14, 0xb1, 0x73, 0x31, 0x3b, 0xba,
-	0x06, 0x43, 0x14, 0x38, 0xe2, 0x50, 0x10, 0x14, 0xec, 0x28, 0xc0, 0xe0, 0x64, 0x1a, 0x65, 0x9c,
-	0x9e, 0x59, 0x92, 0x51, 0x9a, 0xa4, 0x97, 0x9c, 0x9f, 0xab, 0x9f, 0x93, 0x99, 0x98, 0x6b, 0x69,
-	0x64, 0xac, 0xef, 0x0d, 0x76, 0x69, 0x71, 0x6a, 0x51, 0x59, 0x6a, 0x91, 0x7e, 0x41, 0x76, 0xba,
-	0x3e, 0xd8, 0x99, 0xfa, 0x70, 0x0f, 0x24, 0xb1, 0x81, 0x05, 0x8c, 0x01, 0x01, 0x00, 0x00, 0xff,
-	0xff, 0x23, 0xed, 0xf3, 0x9f, 0xd4, 0x00, 0x00, 0x00,
+	0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0xe2, 0x04, 0x4b, 0xe9, 0x25, 0x16, 0x64, 0x2a, 0xe9, 0x73,
+	0x71, 0x3b, 0x26, 0x27, 0xa7, 0x16, 0x17, 0x87, 0xe4, 0x67, 0xa7, 0xe6, 0x09, 0x29, 0x70, 0x31,
+	0x67, 0x95, 0x97, 0x48, 0x30, 0x2a, 0x30, 0x6a, 0x70, 0x1b, 0xf1, 0xe9, 0xc1, 0xd5, 0xe9, 0x79,
+	0x85, 0x87, 0x04, 0x81, 0xa4, 0x94, 0xa4, 0xb9, 0x98, 0xbd, 0xc2, 0x43, 0x84, 0x44, 0xb8, 0x58,
+	0x4b, 0x40, 0x3a, 0xc0, 0x4a, 0x39, 0x83, 0x20, 0x1c, 0x2d, 0x19, 0x2e, 0x5e, 0x8f, 0xc4, 0xe2,
+	0x0c, 0xc7, 0x9c, 0xf4, 0xfc, 0xa2, 0xcc, 0x92, 0x8c, 0x5c, 0x21, 0x6e, 0x2e, 0xf6, 0x60, 0x0f,
+	0xc7, 0x78, 0x53, 0x43, 0x23, 0x01, 0x06, 0x2d, 0x79, 0x2e, 0x91, 0x60, 0xd7, 0xbc, 0xe4, 0xa2,
+	0xca, 0x82, 0x92, 0xcc, 0xfc, 0x3c, 0x84, 0x22, 0x76, 0x2e, 0x66, 0x47, 0xd7, 0x60, 0x88, 0x02,
+	0x47, 0x1c, 0x0a, 0x82, 0x82, 0x1d, 0x05, 0x18, 0x9c, 0x4c, 0xa3, 0x8c, 0xd3, 0x33, 0x4b, 0x32,
+	0x4a, 0x93, 0xf4, 0x92, 0xf3, 0x73, 0xf5, 0x73, 0x32, 0x13, 0x73, 0x2d, 0x8d, 0x8c, 0xf5, 0xbd,
+	0xc1, 0x1e, 0x2d, 0x4e, 0x2d, 0x2a, 0x4b, 0x2d, 0xd2, 0x2f, 0xc8, 0x4e, 0xd7, 0x07, 0xfb, 0x52,
+	0x1f, 0xee, 0xff, 0x24, 0x36, 0xb0, 0x80, 0x31, 0x20, 0x00, 0x00, 0xff, 0xff, 0x17, 0x42, 0xa8,
+	0x9e, 0x13, 0x01, 0x00, 0x00,
 }
